--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+
   {% include head.html %}
 
   <body>
