Added projects page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>{{ site.name }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><a href="mailto:{{ site.email | encode_email }}" title="Contact me">lucasdelevy 「at」 neuron.eei.eng.osaka-u.ac.jp</a></li>
         </ul>
       </div>
 
