--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,11 @@
 <footer class="site-footer">
 
+  <style>
+  p.footer {
+    line-height: 1.5;
+  }
+  </style>
+
   <div class="wrapper">
 
     <h2 class="footer-heading">{{ site.title }}</h2>
@@ -41,7 +47,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description}}</p>
+        <p class="footer">{{ site.description}}</p>
       </div>
     </div>
 
