Changes in CSS and layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,93 @@
+<!-- Dropdown menu based on W3Schools tutorial: http://www.w3schools.com/howto/howto_js_dropdown.asp -->
+
 <header class="site-header">
+
+  <style>
+  /* Dropdown Button */
+  .dropbtn
+  {
+    cursor: pointer;
+    background-color: #3E8181;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus
+  {
+    cursor: pointer;
+    background-color: #216868;
+  }
+
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown
+  {
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+  }
+
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content
+  {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+
+  /* Links inside the dropdown */
+  .dropdown-content a
+  {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover
+  {
+    background-color: #f1f1f1
+  }
+
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show
+  {
+    display:block;
+  }
+
+  </style>
+
+  <script>
+  /* When the user clicks on the button, 
+  toggle between hiding and showing the dropdown content */
+  function openDropDown()
+  {
+    document.getElementById("drop-down-div").classList.add("show");
+  }
+
+  // Close the dropdown menu if the user clicks outside of it
+  window.onclick = function(event)
+  {
+    if (!event.target.matches('.dropbtn'))
+    {
+
+      var dropdowns = document.getElementsByClassName("dropdown-content");
+      var i;
+      for (i = 0; i < dropdowns.length; i++)
+      {
+        var openDropdown = dropdowns[i];
+        if (openDropdown.classList.contains('show'))
+          openDropdown.classList.remove('show');
+      }
+    }
+  }
+  </script>
 
   <div class="wrapper">
 
@@ -21,6 +110,12 @@
             {% endif %}
           {% endif %}
         {% endfor %}
+        <div class="dropdown">
+          <button onmouseenter="openDropDown()" class="dropbtn">sandbox</button>
+          <div id="drop-down-div" class="dropdown-content">
+          <a class="page-link" href="/game-of-life"> game of life </a>
+          <a class="page-link" href="/has-matheus-portela-failed-already">has matheus portela failed?</a>
+        </div>
       </div>
     </nav>
 
