--- a/css/main.scss
+++ b/css/main.scss
@@ -15,8 +15,8 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #f2f2f2;
-$brand-color:      #2a7ae2;
+$background-color: #FFE5E5;
+$brand-color:      #AD3737;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
