--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -101,8 +101,7 @@ a {
     }
 
     &:hover {
-        color: $text-color;
-        text-decoration: underline;
+        color: #7DA234;
     }
 }
 
