Added pattern buttons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -68,7 +68,7 @@
   toggle between hiding and showing the dropdown content */
   function openDropDown()
   {
-    document.getElementById("drop-down-div").classList.add("show");
+    document.getElementById("dropdown-div").classList.add("show");
   }
 
   // Close the dropdown menu if the user clicks outside of it
@@ -112,7 +112,7 @@
         {% endfor %}
         <div class="dropdown">
           <button onmouseenter="openDropDown()" class="dropbtn">sandbox</button>
-          <div id="drop-down-div" class="dropdown-content">
+          <div id="dropdown-div" class="dropdown-content">
           <a class="page-link" href="/game-of-life"> game of life </a>
           <a class="page-link" href="/has-matheus-portela-failed-already">has matheus portela failed?</a>
         </div>
