--- a/css/main.scss
+++ b/css/main.scss
@@ -68,10 +68,10 @@ input[type=range] {
     border: 1px solid white;
     
     /*required for proper track sizing in FF*/
-    width: 200px;
+    width: 20vw;
 }
 input[type=range]::-webkit-slider-runnable-track {
-    width: 200px;
+    width: 20vw;
     height: 5px;
     background: #E3F5BF;
     border: none;
@@ -94,7 +94,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 }
 
 input[type=range]::-moz-range-track {
-    width: 200px;
+    width: 20vw;
     height: 5px;
     background: #ddd;
     border: none;
@@ -115,7 +115,7 @@ input[type=range]:-moz-focusring{
 }
 
 input[type=range]::-ms-track {
-    width: 200px;
+    width: 20vw;
     height: 5px;
     
     /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
