--- a/_includes/header.html
+++ b/_includes/header.html
@@ -114,7 +114,7 @@
           <button onmouseenter="openDropDown()" class="dropbtn">sandbox</button>
           <div id="dropdown-div" class="dropdown-content">
           <a class="page-link" href="/game-of-life"> game of life </a>
-          <a class="page-link" href="/has-matheus-portela-failed-already">has matheus portela failed?</a>
+          <!-- <a class="page-link" href="/has-matheus-portela-failed-already">has matheus portela failed?</a> -->
         </div>
       </div>
     </nav>
