Fix footer and welcome

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>{{ site.name }}</li>
-          <li><a href="mailto:{{ site.email | encode_email }}" title="Contact me">lucasdelevy 「at」 neuron.eei.eng.osaka-u.ac.jp</a></li>
+          <li><a href="mailto:{{ site.email | encode_email }}" title="Contact me">lucasdelevy 「at」 gmail dot com</a></li>
         </ul>
       </div>
 
